@@ -161,12 +161,14 @@ sub signal {
    my $signal = $arg{signal};
 
    my $id = $LOOP->attach_signal ($arg{signal}, $arg{cb});
-   bless [$signal, $id], "AnyEvent::Impl::IOAsync::signal";
+   bless [$signal, $id], "AnyEvent::Impl::IOAsync::signal"
 }
 
 sub AnyEvent::Impl::IOAsync::signal::DESTROY {
    $LOOP->detach_signal (@{ $_[0] });
 }
+
+our %pid_cb;
 
 sub child {
    my ($class, %arg) = @_;
@@ -174,11 +176,36 @@ sub child {
    my $pid = $arg{pid};
 
    $LOOP->watch_child ($pid, $arg{cb});
-   bless [$pid], "AnyEvent::Impl::IOAsync::child";
+   bless [$pid], "AnyEvent::Impl::IOAsync::child"
+}
+
+sub child {
+   my ($class, %arg) = @_;
+
+   my $pid = $arg{pid};
+   my $cb  = $arg{cb};
+
+   unless (%{ $pid_cb{$pid} }) {
+      $LOOP->watch_child ($pid, sub {
+         $_->($_[0], $_[1])
+            for values %{ $pid_cb{$pid} };
+      });
+   }
+
+   $pid_cb{$pid}{$cb+0} = $cb;
+
+   bless [$pid, $cb+0], "AnyEvent::Impl::IOAsync::child"
 }
 
 sub AnyEvent::Impl::IOAsync::child::DESTROY {
-   $LOOP->unwatch_child (@{ $_[0] });
+   my ($pid, $icb) = @{ $_[0] };
+
+   delete $pid_cb{$pid}{$icb};
+
+   unless (%{ $pid_cb{$pid} }) {
+      delete $pid_cb{$pid};
+      $LOOP->unwatch_child ($pid);
+   }
 }
 
 sub AnyEvent::CondVar::_wait {
